2007-03-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/keybindings.h, src/sciwrappers.c,
   src/sciwrappers.h:
   Add Goto Previous/Next Marker keybindings (Ctrl-, and Ctrl-.).
   Make sci_marker_next() and sci_marker_previous() return marker line
   number.
 * src/keybindings.c, src/keybindings.h, src/sciwrappers.c,
   src/sci_cb.c:
   Add Toggle Marker keybinding (Ctrl-M).
 * THANKS, doc/geany.docbook:
   Add bookmarks section written by John Gabriele (thanks).
   Group some subsections into an 'Editing' section.


2007-03-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c:
   Delay updating interface items when switching notebook tabs until
   after the page has changed, so it appears to switch pages faster.
 * src/treeviews.c, src/notebook.c:
   Don't recreate the open files items when DnD reordering tabs, now
   that the open files treeview is sorted alphabetically.
 * src/project.c:
   Make suggested New Project filename use the projects/ directory as
   parent directory, instead of projects/name/.


2007-03-13  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/highlighting.c: Fixed wrong margin colours for filetype All/None.
 * src/highlighting.c: Init the default styles before first usage.


2007-03-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.c:
   Use tab stops for status bar line, column and selection data to stop
   the other fields being moved so often when browsing code or typing.
   Rearrange status bar statistics to be clearer/more concise.
 * src/document.c:
   Count total replacements made when replacing in a rectangular
   selection.
 * src/keybindings.c, src/keybindings.h, src/callbacks.c,
   src/callbacks.h, doc/geany.docbook:
   Add 'Switch to last used document' keybinding.


2007-03-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook: Added description for disable-server command line
                      option for Xfce Terminal.